--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "task2",
+  "name": "task3",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,5 +23,6 @@
     "babel-preset-stage-1": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-preset-stage-3": "^6.17.0"
-  }
+  },
+  "description": ""
 }
